infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bullionradar.com
      http:
        paths:
          - backend:
              serviceName: api-service-cluster-ip-srv
              servicePort: 80
